...
        <View style={styles.contentContainer}>{renderMainContent()}</View>
      </LocationProvider>

      <View style={styles.tabBarContainer}>
        <Pressable style={styles.tabBarButton} onPress={() => setActiveScreenKey(SCREEN_KEYS.HOME)}>
          <Text style={[styles.tabBarButtonText, activeScreenKey === SCREEN_KEYS.HOME && styles.tabBarButtonTextActive]}>
            地图
          </Text>
        </Pressable>

        <Pressable style={styles.tabBarButton} onPress={() => setActiveScreenKey(SCREEN_KEYS.TOSS)}>
          <Text style={[styles.tabBarButtonText, activeScreenKey === SCREEN_KEYS.TOSS && styles.tabBarButtonTextActive]}>
            投掷
...
